--- a/src/main/resources/pages/fragment/common.html
+++ b/src/main/resources/pages/fragment/common.html
@@ -2,11 +2,16 @@
 <html>
 <head th:fragment="headerFragment">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
           th:href="@{/static/bootstrap/css/bootstrap.min.css}"/>
-
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-responsive.min.css"
+          th:href="@{/static/bootstrap/css/bootstrap-responsive.min.css}"/>
     <link rel="stylesheet" href="../static/base/css/base.css"
           th:href="@{/static/base/css/base.css}"/>
+    <script src="../static/common/js/jquery-1.7.2.min.js" th:src="@{/static/common/js/jquery-1.7.2.min.js}"/>
+    <script src="../static/common/js/jquery.validate.min.js" th:src="@{/static/common/js/jquery.validate.min.js}"/>
+    <script src="../static/common/js/jquery.form.min.js" th:src="@{/static/common/js/jquery.form.min.js}"/>
 </head>
 <body>
 <div class="container">
