--- a/src/main/resources/pages/fragment/common.html
+++ b/src/main/resources/pages/fragment/common.html
@@ -3,19 +3,54 @@
 <head th:fragment="headerFragment">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
-          th:href="@{/static/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-responsive.min.css"
-          th:href="@{/static/bootstrap/css/bootstrap-responsive.min.css}"/>
     <link rel="stylesheet" href="../static/base/css/base.css"
           th:href="@{/static/base/css/base.css}"/>
+    <link rel="stylesheet" href="../static/base/css/index.css"
+          th:href="@{/static/base/css/index.css}"/>
     <script src="../static/common/js/jquery-1.7.2.min.js" th:src="@{/static/common/js/jquery-1.7.2.min.js}"/>
     <script src="../static/common/js/jquery.validate.min.js" th:src="@{/static/common/js/jquery.validate.min.js}"/>
     <script src="../static/common/js/jquery.form.min.js" th:src="@{/static/common/js/jquery.form.min.js}"/>
+    <script src="../static/bootstrap/js/bootstrap.min.js" th:src="@{/static/bootstrap/js/bootstrap.min.js}"/>
 </head>
 <body>
-<div class="container">
+<div class="navbar navbar-inverse navbar-fixed-top" th:fragment="topFragment">
+    <div class="navbar-inner">
+        <div class="container-fluid">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="brand" href="#">Project name</a>
 
+            <div class="nav-collapse collapse">
+                <p class="navbar-text pull-right">
+                    Logged in as <a href="#" class="navbar-link">Username</a>
+                </p>
+                <ul class="nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span3" th:fragment="sidebarFragment">
+            <div class="well sidebar-nav">
+                <ul class="nav nav-list">
+                    <li class="nav-header">Sidebar</li>
+                    <li class="active"><a href="#" th:attr="href=@{/index}">联系方式</a></li>
+                </ul>
+            </div>
+            <!--/.well -->
+        </div>
+        <!--/span-->
+    </div>
 </div>
 <footer id="center-footer" th:fragment="footer">
     <div id="footerText" class="span12">Copyright 2013 <a href="http://lvyong1985.farbox.com/">lvyong1985</a> |
