--- a/src/main/resources/pages/login.html
+++ b/src/main/resources/pages/login.html
@@ -21,11 +21,11 @@
                 <label>Login :</label>
                 <input id="j_username" name="j_username"
                        type="text" required="required" autofocus="autofocus" class="input span3"
-                       placeholder="Your login..."/>
+                       placeholder="Your login..." value="admin"/>
                 <label>Password :</label>
                 <input id="j_password" name="j_password"
                        type="password" required="required" class="input span3"
-                       placeholder="Your password..."/>
+                       placeholder="Your password..." value="admin"/>
             </fieldset>
             <button type="submit" class="btn btn-success">Authenticate</button>
         </form>
