--- a/src/main/resources/pages/demo/index.html
+++ b/src/main/resources/pages/demo/index.html
@@ -46,6 +46,13 @@
 <a href="test?orderId=lv">view</a>
 <a href="/mvc/details/yong?orderId=lv">view</a>
 
+<hr/>
+<h2 th:text="#{title.leaguetable(${execInfo.now.time})}">League table for 07 July 2011</h2>
+
+<p th:text="${#dates.createNow()}"></p>
+<span th:text="@{${'/Current date is : '+ beans.smallFunctions.res('1232131')}}">Current date is : 2012-04-14 17:30:00</span>
+
+
 </body>
 
 </html>
