hide search input

--- a/src/main/resources/pages/pagination.html
+++ b/src/main/resources/pages/pagination.html
@@ -6,6 +6,11 @@
 <head>
     <script th:src="@{/static/base/js/base.js}"></script>
     <script th:src="@{/static/base/js/index.js}"></script>
+    <style>
+        .dataTables_filter {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 <div layout:fragment="content" th:remove="tag">
