add simple ajax pager

--- a/src/main/resources/pages/demo/example10.html
+++ b/src/main/resources/pages/demo/example10.html
@@ -7,74 +7,11 @@
 <head>
     <script th:src="@{/static/base/js/base.js}"></script>
     <script th:src="@{/static/base/js/index.js}"></script>
-    <script th:src="@{/static/common/js/jquery.pager.js}"></script>
-    <style>
-        .list .pagerBar {
-            height: 30px;
-            line-height: 30px;
-            padding: 3px 8px;
-            clear: both;
-            border-bottom: 1px solid #d8deea;
-            background-color: #e9f0f4;
-        }
-
-        .list .pagerBar .delete {
-            float: left;
-        }
-
-        .list .pagerBar .pager {
-            float: right;
-            padding-top: 5px;
-        }
-
-        .list #pager .pages {
-            float: right;
-            font-size: 12px;
-            text-transform: uppercase;
-            border: none;
-        }
-
-        .list #pager .pages li {
-            line-height: 16px;
-            float: left;
-            padding: 2px 5px;
-            margin-left: 5px;
-            cursor: pointer;
-            border: 1px solid #cccccc;
-        }
-
-        .list #pager .pages li:hover {
-            border: 1px solid #003f7e;
-        }
-
-        .list #pager .pages .pgEmpty {
-            color: #cfcfcf;
-            padding: 2px 5px;
-            cursor: default;
-            border: 1px solid #cfcfcf;
-        }
-
-        .list #pager .pages .pgCurrent {
-            color: #00000;
-            font-weight: bold;
-            border: 1px solid #003f7e;
-            background-color: #eeeeee;
-        }
-
-        .list .noRecord {
-            height: 30px;
-            line-height: 30px;
-            clear: both;
-            color: red;
-            text-align: center;
-            border-bottom: 1px solid #cccccc;
-        }
-    </style>
 </head>
 <body>
 <div layout:fragment="content" th:remove="tag">
-    <form id="listForm" class="form-inline" method="post" action="#" th:object="${addressInfo}"
-          th:attr="action=@{/pageDemo/simple}">
+    <form id="DemoPageForm" class="form-inline" method="post" action="#" th:object="${addressInfo}"
+          th:attr="action=@{/pageDemo/simple2}">
         <div class="row">
             <div class="span9">
                 <div class="span5">
@@ -118,7 +55,8 @@
                 </table>
                 <!--/table-->
 
-                <div th:include="fragment/layout/pager::pager" th:remove="tag"></div>
+                <div th:include="fragment/layout/pager2::pager" th:with="PageFormId='DemoPageForm'"
+                     th:remove="tag"></div>
 
             </div>
             <!--/span-->
